<resources>
    <string name="app_name">Police Brutality Quiz</string>
    <string name="app_header">Police Brutality or No?</string>
    <string name="app_subheader">Can you spot the appropriate police response to these 5 situations?</string>
    <string name="open_summary">While most people agree with the Encyclopedia.com definition of police brutality as “the use of any force <b>exceeding</b> that <i>reasonably</i> necessary to accomplish a lawful police purpose,” the public and police often disagree on what exactly constitutes “reasonably necessary.”  However, state laws are very clear on their definition of reasonably necessary and that is what I want to share with you right now.  I want it to be known what the law says a police officer can and cannot do in potentially hostile situations.
        \n
        \nBut to make this somewhat fun I constructed this lesson in the form of a quiz.  So feel free to take educated guesses as to what you believe the appropriate amount of force is for each situation and see if you are right according to California law (other states may vary).  And if you do pick a good one, feel free to select the remaining options to see whether or not they could also be legally applied to the situation or if they are in fact, police brutality.
</string>
    <string name="start_button">Start Quiz</string>
    <string name="conclusion">Conclusion</string>
    <string name="question_1">1. You are sweeping your front steps when the police arrive and state that they need to speak with you, but they have not told you why.  The officers order you to drop the broom you are holding so that they can talk to you, but you insist that you need to finish sweeping.  If they want to talk, they can do it while you sweep.  They order you to drop the broom a second time, but you continue sweeping.  The officers can now:</string>
    <string name="question_2">2. Two police officers approach you because you fit the description of a suspect in a battery crime that occurred recently in the area, but for whatever reason, you run.  The officers catch up to you and tackle you to the ground.  The officers can now:</string>
    <string name="question_3">3. Two police officers order you to stop and get up against the wall, but you KNOW that you didn’t break any laws or ordinances and that they have the wrong person.  <u>It’s a fact</u>.  So you ignore them and keep walking, the officers can:</string>
    <string name="question_4">4. You have a replica handgun in your waistband.  Police officers approach you and order you to stay where you are so that they can talk to you.  You know that your toy gun is going to “freak them out,” so you immediately and loudly declare “this gun in a toy!  It’s not real!” and instinctively reach for it in an attempt to discard it so they’ll calm down.  The officers can:</string>
    <string name="question_5">5. You are robbing a convenient store with your only handgun pointed at the clerk behind the counter.  The police are positioned to your side, clearly out of your line of fire.  You don’t see them.  The officers can:</string>
    <string name="q1_o1">a) Talk to you while you sweep.</string>
    <string name="q1_o2">b) Explain to you why they need you to put the broom down.</string>
    <string name="q1_o3">c) Tase you.</string>
    <string name="q1_o4">d) Draw their guns and shoot you for brandishing a weapon in the presence of a police officer.</string>
    <string name="q2_o1">a) Take you into custody as gently as possible.</string>
    <string name="q2_o2">b) Forcefully pin you the ground, apply joint locks to hold you in place and take you into custody as safely as possible for the officers.</string>
    <string name="q2_o3">c) Throw a few strikes, elbows and knees to stun you and make you easier to take into custody.</string>
    <string name="q2_o4">d) Choke you out to be sure you won’t escape or resist.</string>
    <string name="q3_o1">a) Let you go.  You’re not the guy they’re looking for and they have no evidence against you.</string>
    <string name="q3_o2">b) Talk to you while they walk with you.</string>
    <string name="q3_o3">c) Grab you, use a joint lock to force you to stop, and then place you in handcuffs.</string>
    <string name="q3_o4">d) Draw their guns and shoot you for attempting to escape police custody.</string>
    <string name="q4_o1">a) Allow you to toss the toy gun away so that everyone can be more comfortable.</string>
    <string name="q4_o2">b) Order you to stop so they can take the gun from you themselves.</string>
    <string name="q4_o3">c) Rush you and tackle you before you can get to the gun.</string>
    <string name="q4_o4">d) Draw their guns and shoot you to prevent you from handling the toy gun at all.</string>
    <string name="q5_o1">a) Draw their guns and announce themselves before ordering you to drop your weapon and surrender.</string>
    <string name="q5_o2">b) Get the drop on you and tase you.</string>
    <string name="q5_o3">c) Draw their guns, announce themselves, order you to drop your weapon and surrender, but reserve the right to shoot you if you point your gun at them.</string>
    <string name="q5_o4">d) Draw their guns and shoot you without announcing themselves or ordering you to drop your weapon and surrender.</string>
    <string name="result">What do you think?</string>
    <string name="next_button">Next Question</string>
    <string name="q1o1ans">Legal, but not always advisable.  Brooms can be used as weapons and cause serious injury to the officer and anyone else in the area if you get violent.  Even if you don’t intend to get violent, the officer doesn’t know that and isn’t legally obligated to take that chance because you want to continue sweeping.</string>
    <string name="q1o2ans">Legal and advisable.  It is recommended that the officer clearly explain that the broom is considered a weapon and if you do not put it down you can be tased or otherwise forced to put it down.  It is actually required that the officer give you a warning, when it is reasonable to do so, before tasing you.  Whatever happens after you’ve been ordered and warned, should be based on your response.</string>
    <string name="q1o3ans">Police brutality.  It is required that the police officer first give a warning, something to the effect of “drop the broom or you will be tased,” before deploying the taser on you.  If it is reasonable to do so.  And since in this situation you are sweeping and not attacking, it is reasonable for the officer to give you that warning.  However, if you ignore this warning, the taser option becomes legal.  Police officers don’t give suggestions, they give order.  So, if an officer orders you put the broom down and you refuse, they are going to make you put it down.</string>
    <string name="q1o4ans">Attempted murder.  In the given situation you are not assaulting or attempting to assault the officer with the broom, which renders all deadly force options out of play.  However it should be noted that if you move toward the officer with the broom in an attacking posture, this option becomes legal.</string>
    <string name="q2o1ans">Legal and advisable.  That should always be the objective, but whether or not it succeeds should be entirely up to you.  If you resist, your resistance is going to be met with force.  If you relax and remain calm you should be taken into custody without any additional injury or harm.</string>
    <string name="q2o2ans">Legal, but partially advisable.  You ran which is considered an attempt to flee a police detention, and gives the officer the legal authority to use force to prevent your escape.  It doesn’t even matter whether or not you are actually guilty of the crime.  And I understand that the officers have now caught you, and you are no longer fleeing, but the joint lock may be legally applied to control you and prevent further escape since you have already demonstrated your willingness to run.</string>
    <string name="q2o3ans">Police brutality.  In the given situation it is not known whether or not you have continued to resist or are demonstrating any combativeness while on the ground, which is what it would take to make those strikes, elbows and knees legal.  It is not legal for the officer to assault you just because you made them run or for anything you did or caused to happen while running.</string>
    <string name="q2o4ans">Attempted murder.  In California police departments – but not all others – a chokehold is considered deadly force and does not apply to this situation since it is not known whether you are actively assaulting the police officer with deadly force of your own.  For a chokehold to be viable in this situation you would have to have gained an advantage over the officer that tackled you and attack him or her in a way that could cause serious injury.</string>
    <string name="q3o1ans">Legal, but not advisable.  If the officers have a reasonable suspicion that you committed a crime or are involved in a crime then they have the legal authority to detain you and investigate, whether or not they turn out to be wrong.  It’s not a good idea for an officer to just take your word for it without doing an investigation.</string>
    <string name="q3o2ans">Legal, but not advisable.  Walking with you is not a good idea because the officers have no idea where you may be leading them.  Maybe into an ambush?  And the bottom-line is still that if the officers have a reasonable suspicion that you did something illegal, may be involved in something illegal or may be about to do something illegal then they have the authority to detain you and do an investigation.  That means ordering you to stop where you are so they can have control of the situation, or making you stop when you refuse.</string>
    <string name="q3o3ans">Legal and advisable.  At this point you are considered non-cooperative and fleeing a detention.  The officers have given you an order to stop where you are, but you keep moving away.  That gives the officers the legal authority to use a joint lock to force you to comply and place you in handcuff, even if you turn out to be innocent.</string>
    <string name="q3o4ans">Attempted murder.  In the given situation you do not have a visible weapon and you are not assaulting or attempting to cause serious injury to anyone which take deadly force off the table.</string>
    <string name="q4o1ans">Legal, but not advisable.  You may have told them that it’s just a toy gun, but the best thing for you to do is keep your hands as far away from that toy as possible and allow the officers to remove it themselves.</string>
    <string name="q4o2ans">Legal and advisable.  It is always best for officers to give a clear command before deploying any force option.  However, this generally won’t stop the officers from unholstering their weapons just encase you ignore their order.</string>
    <string name="q4o3ans">Legal, but not advisable.  Police officers will never go less-lethal on a person armed with a lethal weapon or even a potentially lethal weapon.  It is understood that you declared that the handgun is a toy, but the officers haven’t confirmed that yet.</string>
    <string name="q4o4ans">Legal.  Reaching for a visually identified handgun makes you a lethally threatening person since guns can be used to cause serious injury or even death.  Because the officers haven’t confirmed the inertness of the gun yet, they are authorized to act as if it’s “real” and use deadly force to prevent you from accessing it if necessary.  That means that just reaching for an unconfirmed toy handgun gives the officers the authorization to shoot you even though it will later be determined that the gun was fake.</string>
    <string name="q5o1ans">Legal.  I don’t think I need to explain why.</string>
</resources>