<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brjpapps.android.policebrutalityquiz.QuizActivity5">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bluewallpaper"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/question5_o1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectForce"
                    android:textColor="#9E9E9E"
                    android:text="@string/q5_o1" />

                <RadioButton
                    android:id="@+id/question5_o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectForce"
                    android:layout_marginTop="8dp"
                    android:textColor="#9E9E9E"
                    android:text="@string/q5_o2" />

                <RadioButton
                    android:id="@+id/question5_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectForce"
                    android:layout_marginTop="8dp"
                    android:textColor="#9E9E9E"
                    android:text="@string/q5_o3" />

                <RadioButton
                    android:id="@+id/question5_o4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectForce"
                    android:layout_marginTop="8dp"
                    android:textColor="#9E9E9E"
                    android:text="@string/q5_o4" />

            </RadioGroup>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="#B6B6B6"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@id/next_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conclusion"
                android:textColor="#212121"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
